Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-28766

MDEV-28111 breaks innodb_flush_log_at_trx_commit=2

    XMLWordPrintable

Details

    Description

      MDEV-28111 and specifically commit c4c88307091 breaks the meaning of innodb_flush_log_at_trx_commit = 2 by enabling O_DIRECT for the redo log.

      O_DIRECT should not be used when innodb_flush_log_at_trx_commit = 2 is set. Since this variable is dynamic, it has not only to be checked at server startup, but each time the variable is written to.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              axel Axel Schwenke
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 5d 5.25h
                  5d 5.25h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.