MDEV-28766: SET GLOBAL innodb_log_file_buffering

In commit c4c88307091cb16886562e9e7b77f5fd077d34b5 (MDEV-28111) we disabled
the file system cache on the InnoDB write-ahead log file (ib_logfile0)
by default on Linux.

It turns out that under some circumstances, writing to the log via the
file system cache does improve throughput, especially on slow storage
or at a small number of concurrent transactions.

On Linux and Microsoft Windows, we will introduce the Boolean global
variable innodb_log_file_buffering for explicitly enabling or disabling
the file system cache on the redo log file. On other operating systems,
no interface has been implemented for controlling the file system cache.

On Microsoft Windows, before and after this change, we will enable
the file system cache on the log if innodb_flush_log_at_trx_commit=2
is set on server startup.

When a persistent memory interface is being used for the log,
the value cannot be changed from innodb_log_file_buffering=OFF.
On Linux, when the physical block size cannot be determined
to be a power of 2 between 64 and 4096 bytes, the value cannot be
changed from innodb_log_file_buffering=ON.